--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mdx-embed-mod",
-  "version": "1.0",
+  "name": "mdx-embed",
+  "version": "1.1.2",
   "description": "Embed 3rd party media content in MDX - no import required",
   "main": "dist/index.js",
   "types": "./dist/types/index.d.ts",
