--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --maxWorkers=1 --maxConcurrency=1",
-    "test:codecov": "npm run test:coverage && codecov -t 85dbf1e3-748b-4f9a-928d-b5eb42d26a03"
+    "test:codecov": "npm run test:coverage && codecov -t 85dbf1e3-748b-4f9a-928d-b5eb42d26a03",
+    "postinstall": "tsc --outDir ./build"
   },
   "husky": {
     "hooks": {
