--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --maxWorkers=1 --maxConcurrency=1",
     "test:codecov": "npm run test:coverage && codecov -t 85dbf1e3-748b-4f9a-928d-b5eb42d26a03",
-    "postinstall": "npm run build:types && npm run build:js"
+    "postinstall": "npm install & npm run build:types && npm run build:js"
   },
   "husky": {
     "hooks": {
