--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     // Allow named exports rather than export * from
     "allowSyntheticDefaultImports": true,
     // Add types for both node and jest
-    "types": ["node", "jest", "@types/testing-library__jest-dom"]
+    "types": ["node"]
   },
   "include": ["src"],
   "paths": {
